--- a/src/main/resources/templates/layouts/_mainLayout.html
+++ b/src/main/resources/templates/layouts/_mainLayout.html
@@ -255,10 +255,9 @@ scratch. This page gets rid of all links and provides the needed markup only.
         <div class="content">
             <div class="container-fluid">
                 <div layout:fragment="content">
-
+                    <!-- Aquí se inyectará el contenido específico de la vista -->
                 </div>
-                <!-- /.row -->
-            </div><!-- /.container-fluid -->
+            </div>
         </div>
         <!-- /.content -->
     </div>
