--- a/src/main/resources/templates/grupo/index.html
+++ b/src/main/resources/templates/grupo/index.html
@@ -1,37 +1,35 @@
+<!DOCTYPE html>
 <html lang="en"
-      xmlns:layout="http://www.ultra .net.nz/thymeleaf/layout"
-      layout:decorate="/layouts/_mainLayout" xmlns:th="http://www.w3.org/1999/xhtml">
-
-<div layout:fragment="content" >
+      xmlns:layout="http://www.ultra.net.nz/thymeleaf/layout"
+      layout:decorate="/layouts/_mainLayout"
+      xmlns:th="http://www.w3.org/1999/xhtml">
+<head>
+    <title>Lista de Grupos</title>
+</head>
+<body>
+<div layout:fragment="content">
     <h1>Lista de Grupos</h1>
-    <a th:href="@{Grupos/create}" class="btn btn-outline-primary" >Nuevo grupo</a>
-<table class="table table-stirped">
-    <theah>
+    <a th:href="@{/Grupos/create}" class="btn btn-outline-primary">Nuevo grupo</a>
+    <table class="table table-striped">
+        <thead>
         <tr>
             <th>ID</th>
             <th>Nombre</th>
-            <th>Descripcion</th>
+            <th>Descripción</th>
             <th>Acciones</th>
         </tr>
-    </theah>
-    <tbody>
-    <tr th:each="item : ${grupos}">
-        <td th:text="${item.id}" ></td>
-        <td th:text="${item.nombre}" ></td>
-        <td th:text="${item.descripcion}" ></td>
+        </thead>
+        <tbody>
+        <tr th:each="item : ${grupos}">
+            <td th:text="${item.id}"></td>
+            <td th:text="${item.nombre}"></td>
+            <td th:text="${item.descripcion}"></td>
+            <td>
+                <a th:href="@{/Grupos/details/{id}(id=${item.id})}">ver</a>
 
-        <td>
-            <a th:href="@{/grupos/details/{id} (id = ${item.id))}">ver</a>
-            <a th:href="">editar</a>
-            <a th:href="">eliminar</a>
-
-        </td>
-
-
-
-    </tr>
-    </tbody>
-</table>
+        </tr>
+        </tbody>
+    </table>
 </div>
-
+</body>
 </html>
