--- a/src/main/resources/templates/docente/index.html
+++ b/src/main/resources/templates/docente/index.html
@@ -39,7 +39,7 @@
             <th>email</th>
             <th>telefono</th>
             <th>escuela</th>
-            <th>Acciones</th>
+            <th>acciones</th>
         </tr>
         </thead>
         <tbody>
