--- a/src/main/resources/templates/grupo/index.html
+++ b/src/main/resources/templates/grupo/index.html
@@ -37,7 +37,7 @@
             <th>ID</th>
             <th>Nombre</th>
             <th>Descripción</th>
-            <th>Acciones</th>
+            <th>acciones</th>
         </tr>
         </thead>
         <tbody>
